# Rias

./: .gitignore  CMakeLists.txt  README.md
include/: rias.h  rias_impl.h
src/: rias_impl.c  test.c
